# webol

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm.build  Dockerfile.build  LICENSE  README.md  docker-compose.yml
.github/workflows/: pull_request.yml  push.yml  test.yml
.sqlx/: query-035eea2a3ffbc6fcf5e1646f4e13e879b6e13325e38cd10d5ee160c5aded2caf.json  query-1dc5f44967ffdee882f4cef32262fd643b452aacca373ee527c978e816115de6.json  query-25ab5caa92ff80ef3f85ddce1174021ce0fb896a818a6deee291a1eb85ae2a8a.json  query-3ed66b56b7e78a6b6bad9d49c49607520a8d09f902b996467dddf58737a3757f.json  query-566c84386614590144dfebce2248cb3a734074014a493a7aad6fa03bb1286dc8.json  query-5ac2b9a76338dd1342938cc09e37b14c828c4ee44b696d83f87f739022be6948.json  query-62c84231c7e9c85dc91d71f6b4f7ee6dae2130c2109fb6f1e47e0990ec395744.json  query-6a81887a8b44b527ad04c8963d5186b764ec9125d597f9fba566e280bd09d352.json  query-82c11b5a47389884e4ed945b87dfcee9067933c4df892609700c0766c20fc5c5.json  query-a1114f47abaa2ace231ef61cbd787a2f2a30efc581ea075b7e86ae75458c9014.json  query-adead45e1a6b02d5eabd68b8cf06394a302d288e91f5eedde65db6630021f737.json  query-bb9c6a42084b92c339a85f9b1c094959a49c6b7383f1a0b49df242e2720a9185.json  query-df462bb016e2d258de146e248493f4458a532eee554d57438ef7849758238185.json  query-e452c5ed8bdaec2011d78386cffd2b4739d88b3061931562e07c3e8dd24e6359.json  query-edc4ecf39512caec1076be1b2849b2530be7bcdcbe14362077b3fd47cd711c89.json  query-f179f38584f97842cd41159dd2293fa19e5f1975ea8810526924e77683ba92c4.json
migrations/: 20231009123228_devices.sql
src/: auth.rs  config.rs  db.rs  error.rs  extractors.rs  main.rs  routes.rs  storage.rs  wol.rs
src/routes/: device.rs  devices.rs  mod.rs  start.rs  status.rs
src/services/: ping.rs
