[package]
name = "webol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "ws"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time", "time"] }
time = { version = "0.3.29", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
config = "0.13.3"
once_cell = "1.18.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"]}
surge-ping = "0.8.0"
