[package]
name = "webol"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "time"] }
time = { version = "0.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
once_cell = "1.18"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"]}
surge-ping = "0.8"
axum-macros = "0.4"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
dashmap = "5.5"
color-eyre = "0.6"
