[package]
name = "webol"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "time"] }
time = { version = "0.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "ipnetwork", "mac_address"]}
surge-ping = "0.8"
axum-macros = "0.4"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
dashmap = "5.5"
color-eyre = "0.6"
thiserror = "1.0"
ipnetwork = "0.20"
mac_address = { version = "1.1", features = ["serde"] }
tracing-appender = "0.2.3"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
